<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EmailUs">

    <TextView
        android:id="@+id/txtEmailToLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailToLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/emailTo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSubjectLineLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subjectLineLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtSubjectLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subjectHint"
        android:inputType="textEmailSubject"
        android:text="@string/subjectLine" />

    <TextView
        android:id="@+id/txtEmailBodyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailBodyLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/txtEmailBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:hint="@string/emailBodyHint"
        android:lines="10"
        android:text="@string/emailBody" />

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button_bg"
        android:text="@string/composeEmail" />


</LinearLayout>