<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VendorPage">

    <EditText
        android:id="@+id/coalDustKegQuantity"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/coalDustKegQuantity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/txtCoalDustKegCost"
        app:layout_constraintTop_toBottomOf="@+id/greatWesternKegQuantity" />

    <EditText
        android:id="@+id/greatWesternKegQuantity"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/greatWesternKegQuantity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/txtGreatWesternKegCost"
        app:layout_constraintTop_toBottomOf="@+id/sunriseKegQuantity" />

    <EditText
        android:id="@+id/sunriseKegQuantity"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/sunriseKegQuantity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toEndOf="@+id/txtSunriseKegCost"
        app:layout_constraintTop_toBottomOf="@+id/coalDustBomberQuantity" />

    <EditText
        android:id="@+id/coalDustBomberQuantity"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/coalDustBomberQuantity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toEndOf="@+id/txtCoalDustBomberCost"
        app:layout_constraintTop_toBottomOf="@+id/greatWesternBomberQuantity" />

    <Button
        android:id="@+id/btnHomePage"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/homePage"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnContactUs"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/contactUs"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHomePage" />

    <Button
        android:id="@+id/btnWhatsOnTap"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/onTapLabel"
        app:layout_constraintEnd_toStartOf="@+id/txtVendorInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContactUs" />

    <TextView
        android:id="@+id/txtVendorInstructions"
        android:layout_width="219dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/vendorInstructions"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="221dp"
        android:layout_height="79dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/forgeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forge_logo" />

    <TextView
        android:id="@+id/txtItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/item"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWhatsOnTap" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtItem"
        app:layout_constraintTop_toBottomOf="@+id/btnWhatsOnTap" />

    <TextView
        android:id="@+id/txtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/quantity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toEndOf="@+id/txtPrice"
        app:layout_constraintTop_toBottomOf="@+id/txtVendorInstructions" />

    <TextView
        android:id="@+id/txtSunriseBomber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bomberSunrise"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem" />

    <TextView
        android:id="@+id/txtGreatWesternBomber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/bomberGreatWestern"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSunriseBomber" />

    <TextView
        android:id="@+id/txtCoalDustBomber"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/bomberCoalDust"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGreatWesternBomber" />

    <TextView
        android:id="@+id/txtSunriseKeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/kegSunrise"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCoalDustBomber" />

    <TextView
        android:id="@+id/txtGreatWesternKeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/kegGreatWestern"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSunriseKeg" />

    <TextView
        android:id="@+id/txtCoalDustKeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/kegCoalDust"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGreatWesternKeg" />

    <TextView
        android:id="@+id/txtSunriseBomberCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:text="@string/sunriseCost"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/txtSunriseBomber"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <TextView
        android:id="@+id/txtGreatWesternBomberCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/greatWesternCost"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/txtGreatWesternBomber"
        app:layout_constraintTop_toBottomOf="@+id/txtSunriseBomberCost" />

    <TextView
        android:id="@+id/txtCoalDustBomberCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/coalDustCost"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/txtCoalDustBomber"
        app:layout_constraintTop_toBottomOf="@+id/txtGreatWesternBomberCost" />

    <TextView
        android:id="@+id/txtSunriseKegCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="28dp"
        android:text="@string/sunriseKegCost"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/txtSunriseKeg"
        app:layout_constraintTop_toBottomOf="@+id/txtCoalDustBomberCost" />

    <TextView
        android:id="@+id/txtGreatWesternKegCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/greatWesternKegCost"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/txtGreatWesternKeg"
        app:layout_constraintTop_toBottomOf="@+id/txtSunriseKegCost" />

    <TextView
        android:id="@+id/txtCoalDustKegCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:text="@string/coalDustKegCost"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/txtCoalDustKeg"
        app:layout_constraintTop_toBottomOf="@+id/txtGreatWesternKegCost" />

    <EditText
        android:id="@+id/sunriseBomberQuantity"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/sunriseBomberQuantity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/txtSunriseBomberCost"
        app:layout_constraintTop_toBottomOf="@+id/txtQuantity" />

    <EditText
        android:id="@+id/greatWesternBomberQuantity"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/greatWesternBomberQuantity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/txtGreatWesternBomberCost"
        app:layout_constraintTop_toBottomOf="@+id/sunriseBomberQuantity" />

    <Button
        android:id="@+id/btnPurchase"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/btnPurchase"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnPurchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>